crates/toml_edit/tests/fixtures/invalid/string/bad-codepoint.stderr
TOML parse error at line 1, column 76
  |
1 | invalid-codepoint = "This string contains a non scalar unicode codepoint \uD801"
  |                                                                            ^
Invalid unicode 4-digit hex code
Value is out of range
